--- a/src/components/Business/Business.css
+++ b/src/components/Business/Business.css
@@ -2,7 +2,7 @@
     max-width: 300px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 12px;
+    margin: 0 0.5rem 2.3rem 0.5rem;
 }
 
 .restaurant-pic-container {
